@@ -138,6 +138,8 @@ class FX {
     var $fxError = 'No Action Taken';
     var $errorTracking = 0;
     var $useInnerArray = null;                                              // Do NOT change this variable directly.  Use FlattenInnerArray() or the appropriate param of action method.
+    var $useReturnJSONResult = false;
+    var $useReturnJSONFullArrayResult = false;
     var $useComma2Period = false;
 
     // These variables will be used if you need a password to access your data.
@@ -454,6 +456,13 @@ class FX {
         }
 
         $this->ClearAllParams();
+/*
+// Added to github 4/4-2014
+        if( $this->useReturnJSONFullArrayResult == true ) {
+            // Not sure if array_values() are needed
+            $dataSet = json_encode( array_values( $dataSet ) );
+        }
+ */
         return $dataSet;
     }
 
@@ -845,6 +854,16 @@ $wo_find->FindQuery_Append($searchFields);
     // When these are not present, or when accessing SQL data, this may not be desirable.  FlattenInnerArray() removes this extra layer.
     function FlattenInnerArray () {
         $this->useInnerArray = false;
+    }
+
+    // This will give you the fields and contents pr record as JSON
+    function ReturnJSON () {
+        $this->useReturnJSONResult = false;
+    }
+
+    // This will give you the whole FMPXMLRESULT as JSON
+    function ReturnJSONFullArray () {
+        $this->useReturnJSONFullArrayResult = false;
     }
 
 /* The actions that you can send to FileMaker start here */
