@@ -10,6 +10,7 @@ Latest changes might exist on the GitHub repository. Please check https://github
 
 Ver.4.5 (in development)
 - Sync with multiple clients in update/insert/delete with Pusher.
+- Update FX.php (July 29, 2014) for DB_FileMaker_FX class.
 - Modify setToDB() of DB_PDO.php to avoid outputting error messages in an error log file.
 - [BUG FIX] The JavaScript code editor "codemirror" support plugin was modified. It works fine.
 
